[package]
name = "aerobro"
version = "0.0.1"
authors = ["4KB4RPN136 <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
dotenv = "0.15"
actix-web = "3.3"
paho-mqtt = "0.9"
futures = "0.3.1"
actix-cors = "0.5"
tokio = { version = "0.2", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.3", features = ["postgres"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
